--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -4,6 +4,12 @@
     flex-wrap: wrap;
 }
 
+@mixin flexCenter() {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @mixin flexBetween() {
 	display: flex;
 	justify-content: space-between;
@@ -16,3 +22,4 @@
     top: 50%;
     transform: translate(-50%, -50%)
 }
+
