--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,25 +3,18 @@ $duration: .3s;
 
 @import './variables';
 @import './mixin';
+@import './modules/navbar';
 @import './modules/card';
 @import './modules/modal';
 @import '../lieux/scss/lieux';
-@import '../accueil/scss/accueil';
+@import '../episode/scss/episode';
 @import '../personnage/scss/personnage';
 
-*{ box-sizing: border-box; }
 
 body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: $Schwifty;
     font-size: 16px;
     line-height: 1.4;
-    background-color: #d8e0e5;
     max-width: 1200px;
-    height: 100vh;
     margin: 0 auto;
-}
-
-.responsive_img{
-    width: 100%;
-    height: auto;
 }
