Ajout font Nosifer

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,8 @@
 	src: url('../polices/get-schwifty.ttf');
 }
 
+$Nosifer: 'Nosifer', sans-serif;
+
 $Blood: 'Blood' , sans-serif;
 $Schwifty: 'Schwifty' , sans-serif;
 
