--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,11 +9,10 @@
 }
 
 $Nosifer: 'Nosifer', sans-serif;
-
 $Blood: 'Blood' , sans-serif;
 $Schwifty: 'Schwifty' , sans-serif;
-
 $duration: 0.3;
 $colorOrange: #EF5A31;
+$redColor: #6C1007;
 
 
