--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -1,47 +1,178 @@
-//tableau des couleurs
-$colors: (
- WhiteColor: white,
- fontBlackColor: black,
- naviBlue: #2B1B92,
- darkBlue: #0F054E
-);
+// //tableau des couleurs
+// $colors: (
+//  WhiteColor: white,
+//  fontBlackColor: black,
+//  naviBlue: #2B1B92,
+//  darkBlue: #0F054E
+// );
 
-$font:(
- regular: 16px,
- title:24px
-);
+// $font:(
+//  regular: 16px,
+//  title:24px
+// );
 
-body, html{
- width: 100%;
-}
-body{
- margin: 0;
+// body, html{
+//  width: 100%;
+// }
+// body{
+//  margin: 0;
 
- nav{
-  background-color: map-get($colors, darkBlue);
-  display: flex;
-  justify-content: space-evenly;
+//  nav{
+//   background-color: map-get($colors, darkBlue);
+//   display: flex;
+//   justify-content: space-evenly;
   
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 50px;
-  overflow-x: hidden;
-  left: 0;  
-  a{
-   align-self: center;
-   text-decoration: none;
-   color: map-get($colors , WhiteColor);
-   padding: 15px;
-   line-height: 8px;
-   text-align: center;
-   font-size: map-get($font, regular);
+//   position: fixed;
+//   z-index: 1;
+//   width: 100%;
+//   height: 50px;
+//   overflow-x: hidden;
+//   left: 0;  
+//   a{
+//    align-self: center;
+//    text-decoration: none;
+//    color: map-get($colors , WhiteColor);
+//    padding: 15px;
+//    line-height: 8px;
+//    text-align: center;
+//    font-size: map-get($font, regular);
 
-   &:hover{
-    cursor: pointer;
-    background-color: map-get($colors , naviBlue);
-    border-radius: 5px;
-   }
+//    &:hover{
+//     cursor: pointer;
+//     background-color: map-get($colors , naviBlue);
+//     border-radius: 5px;
+//    }
+//   }
+//  }
+// }
+
+header {
+    /* Striped background */
+    background: #2a1135;
+    background-image:
+      linear-gradient(90deg, transparent 50%, #190b20 50%);
+    background-size: 52px;
+    box-shadow: inset 0 0 100px #000;
+  
+    text-align: center;
+    padding: 2em 2em 3em;
+    position: relative;
+  
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      width: 100%;
+      position: absolute;
+      left: 0;
+    }
+  
+    &::before {
+      /* Red gradients for blood */
+      background:
+        linear-gradient(red 50%, transparent 60%),
+        radial-gradient(#d40000 50%, transparent 70%),
+        radial-gradient(red 30%, transparent 40%),
+        radial-gradient(#d40000 10%, transparent 20%),
+        radial-gradient(red 10%, transparent 15%);
+      background-size: 100% 100%, 500px 500px, 200px 200px, 103px 273px, 77px 800px;
+      background-position: 0 0, -97% -78%, 71% 0%, 7% 23%, 5% 49%;
+  
+      /* Background blend for bleed effect */
+      mix-blend-mode: multiply;
+  
+      /* Mouse ignore blood */
+      pointer-events: none;
+  
+      /* Hide before hover transition */
+      opacity: 0;
+      transform: translateY(-100%);
+  
+      /* Mouseout effect */
+      transition: opacity 3s linear, transform 1s 3s linear;
+  
+      height: 100%;
+      top: 0;
+    }
+  
+    /* Hover transition */
+    &:hover::before {
+      opacity: 1;
+      transform: translateY(0);
+      transition: opacity 1s 0s, transform 5s 0s linear;
+    }
+  
+    /* Header bottom edge */
+    &::after {
+      background-image:
+        radial-gradient(#07050a 40%, transparent 41%),
+        radial-gradient(#07050a 40%, transparent 41%);
+      background-size: 104px 104px;
+      background-position: 0 0, 52px 0;
+  
+      height: 104px;
+      bottom: -52px;
+      z-index: -1;
+    }
   }
- }
-}
+  
+  /* Styling */
+  
+
+  
+  h1 {
+    color: #fff;
+    font: normal 52px 'Emilys Candy',serif;
+    text-shadow: 3px 3px 0 #000;
+    margin: 0.5em 0 0;
+  }
+  
+  nav {
+    /* Uncomment layer links above blood effect */
+    //position: relative;
+  
+    ul,
+    li {
+      display: inline;
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+  
+    a {
+      color: #52d7ea;
+      font-weight: 700;
+      padding: 1em 2em;
+      text-decoration: none;
+      transition: all 1s;
+  
+      &:hover {
+        letter-spacing: 0.2em;
+      }
+    }
+  }
+  
+  .tagline {
+    color: #dcbd77;
+    margin: 0;
+  }
+  
+  /* Remove effects on mobile, fix nav */
+  @media (max-width: 714px) {
+    header::before {
+      display: none;
+    }
+  
+    nav {
+      a {
+        line-height: 2.5;
+        padding: 1em;
+        white-space: nowrap;
+  
+        &:hover {
+          letter-spacing: 0;
+        }
+      }
+    }
+  
+  }
