--- a/lieux_episode/scss/_episode.scss
+++ b/lieux_episode/scss/_episode.scss
@@ -1,316 +1,80 @@
-// LOCATION
 
-*{ box-sizing: border-box; }
-
-.body_bg{
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: $Nosifer;
-    background: url("../images/bg_RandM.jpg");
-    background-size: contain;
-    font-size: 12px;
-    margin: 0;
-}
-
-
-.wrapper_bg{
-    background: url("../images/Daco_109903.png") no-repeat;
-    position: absolute;
-    height: 480px;
-    width: 100%;
-    background-size: contain;
-    background-position: top;
-}  
 
 .wrapper{
-    position: relative;
-    padding: 10px;
-    margin: 0 auto;
-    max-width: 1400px;
-    z-index: 30;
-}  
-
-.responsive_img{
-    width: 100%;
-    height: auto;
-}
-
-.locations{
-    height: 100%;
-    padding-top: 100px;
-    a{
-        text-decoration: none;
-    }
-    &_bg{
-        height: 450px;
-        margin-top: 52px;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        img{
-            width: 100%;
-            height: inherit;
-        }
-    }   
-    &_body{
-        padding: 10px;
-        min-height: 400px;
-    }
-
-    &_title{
-        color: #6C1007;
-        font-size: 3em;
-        text-shadow: 0 0 10px #000;  
-        font-family: $Nosifer;  
-    }
-
-    &_count{
-        font-size: 16px;
-        font-weight: 400;
-    }
-
-    &_link{
-        font-size: 16px;
-        font-weight: 400;
-        display: block;
-    }
-
-    &_details{
-        padding: 10px;
-    }
-
-    &_card{
+    .radios{
+        width: 400px;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        color: #fff;
         position: relative;
-        min-width: 200px;
-        img{
-            width: 100%;
-            height: inherit
-        }
-        &_body {
-            background-color: #ddd;
-            width: 100%;
-            height: 150px;
-            bottom: 0px;
-            width: 100%;
-            box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
-            width: 200px;
-            padding: 10px;
-            border-radius: 5px 5px 0px 0px;
-            z-index: 2;
-            border-bottom: 10px solid #6C1007;
-            :first-child{
-                color: $colorOrange;
-                background: #e7e7e7;
-                padding: 4px 8px; 
-                width: auto;
-                text-align: center;
-                display: inline;
-                border-radius: 10px;
-                font-size: 11px;
-            }
-            &:hover{
-                box-shadow: 0 1px 12px rgba(0,0,0,0.12), 0 3px 12px rgba(0,0,0,0.24);
-            }
-            a{
-                margin-top: 15px;
-                display: block;
-            }
-            &_bg{
-                background: url("../images/blood_PNG6092.png");
-                height: 70px;
-                width: 200px;
-                background-size: cover;
-                bottom: 200px;
-                position: absolute;
-                top: 100%;
-                z-index: 1;
-            }
+        input{
+            cursor: pointer;
         }
     }
 
-    &_list{
-        @include flexArrow();
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        li{
-            margin-bottom: 20px;
-            padding: 10px;
-            span{
-                display: block;
-            }
-        }
-    }
-    
-}
-
-
-.buttons{
-    margin-top: 100px;
-    .button{
-        border: none;
-        display: inline-block;
-        padding: 8px 16px;
-        vertical-align: middle;
-        overflow: hidden;
-        text-decoration: none;
-        color: inherit;
-        background-color: inherit;
-        text-align: center;
-        cursor: pointer;
-        margin-bottom: 30px;
-        border: none;
-        outline: none;
-        margin-right: 5px;
-    }
-}
-
-
-.button--green{
-    color: #fff!important;
-    background-color: #4CAF50!important;
-}
-
-.button--red{
-    color: #fff!important;
-    background-color: $redColor!important;
-}
-
-.button[disabled=true]{
-  border: 1px solid #999999!important;
-  background-color: #cccccc!important;
-  color: #666666!important;
-}
-
-.button--default{
-    color: #000!important;
-    background-color: #f1f1f1!important;
-}
-
-@media screen and (min-width: 820px) and (max-width: 992px){
-    .locations{
-        &_details{
-           width: 33%;
-           padding: 10px;
+    .app_lists{
+        h2{
+            color: #c74f43;
+            font-size: 2em;
+            border-bottom: 2px dashed;
+            font-family: "Nosifer", sans-serif;
+            margin: 50px 0;
         }
     }
 }
 
-@media screen and (min-width: 992px){
-    .locations{
-        &_details{
-           padding: 10px;
-        }
-    }
-}
 
-// AUTOCOMPLETE
-.autocomplete {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-
-  input {
-    border: 1px solid transparent;
-    background-color: #f1f1f1;
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  input[type=text] {
-    background-color: #f1f1f1;
-    width: 100%;
-  }
-  
-  input[type=submit] {
-    background-color: $redColor;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .autocomplete-items {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    border-bottom: none;
-    border-top: none;
-    z-index: 99;
-    /*position the autocomplete items to be the same width as the container:*/
-    top: 100%;
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
     left: 0;
-    right: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    z-index: 2;
+    background-color: #880808;
   }
   
-  .autocomplete-items div {
-    padding: 10px;
-    cursor: pointer;
-    background-color: #fff; 
-    border-bottom: 1px solid #d4d4d4; 
-  }
-  
-  /*when hovering an item:*/
-  .autocomplete-items div:hover {
-    background-color: #e9e9e9; 
-  }
-  
-  /*when navigating through the items using the arrow keys:*/
-  .autocomplete-active {
-    background-color: DodgerBlue !important; 
-    color: #ffffff; 
-  }
-
-}
-  
-// Ribbons
-.ribbon {
-$default-right: 10px;
-$default-top: -2px;
-$default-color: #2ca7d8;
-$default-width: 40px;
-$default-height: 45px;
-
-position: absolute;
-right: var(--right, $default-right);
-top: var(--top, $default-top);
-
-filter: drop-shadow(2px 3px 2px rgba(black, 0.5));
-
-> .content {
-    color: white;
-    font-size: 1.25rem;
+  .overlay-content {
+    position: relative;
+    top: 10%;
+    width: 100%;
     text-align: center;
-    font-weight: 400;
-    background: var(--color, $default-color) linear-gradient(45deg, rgba(black, 0) 0%, rgba(white, 0.25) 100%);
-    padding: 8px 2px 4px;
-    
-    
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 100%, 0 100%);
-    
-    width: var(--width, $default-width);
-    min-height: var(--height, $default-height);
-    
-    transition: clip-path 1s, padding 1s, background 1s;
-}
-
-&.slant-up > .content {
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 12px), 50% calc(100% - 6px), 0 100%);
-}
-
-&.slant-down > .content {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 50% calc(100% - 6px), 0 calc(100% - 12px));
-}
-
-&.down > .content {
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 8px), 50% 100%, 0 calc(100% - 8px));
-}
-
-&.up > .content {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 50% calc(100% - 8px), 0 100%);
-}
-
-&.check > .content {
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), 40% 100%, 0 calc(100% - 12px));
-}
-}
+    margin-top: 30px;
+    .card{
+        width: 33%;
+    }
+  }
   
-
-
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
