--- a/scss/modules/_card.scss
+++ b/scss/modules/_card.scss
@@ -6,7 +6,8 @@ $image-size: 100%;
 $image-height: 250px;
 
 
-.card {
+.cardV1{
+  .card {
   margin: 0px auto 20px;
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -72,4 +73,5 @@ $image-height: 250px;
 
 .card-date, .card-excerpt {
   color: #777;
+}
 }
