--- a/personnage/scss/_personnage.scss
+++ b/personnage/scss/_personnage.scss
@@ -1,18 +1,29 @@
-.app_lists{
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  z-index: 3; 
-  
-  .card img{
-    height: auto;
-    width: 100%;
-  }
 
-  .card__header{
-    h2{
-      height: 150px;
+.wrapper_personnage {
+    .radios {
+      width: 400px;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      color: #fff;
+      position: relative;
+    }
+
+  .app_lists{
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    z-index: 3; 
+    
+    .card img{
+      height: auto;
+      width: 100%;
+    }
+
+    .card__header{
+      h2{
+        height: 150px;
+      }
     }
   }
 }
-
