--- a/scss/modules/_modal.scss
+++ b/scss/modules/_modal.scss
@@ -245,7 +245,7 @@
       }
     }
     .modal-background {
-      display:table-cell;
+      // display:table-cell;
       background:rgba(0,0,0,.8);
       text-align:center;
       vertical-align:middle;
