--- a/scss/modules/_cardV3.scss
+++ b/scss/modules/_cardV3.scss
@@ -7,6 +7,7 @@
     border-radius: 12px;  
     background: white;
     border: 1px solid #d4d4d4;
+    margin-bottom: 20px;
   }
   .card header {
     background-image: url('https://images.unsplash.com/photo-1616268177838-f524156bb98d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxNjYyMTQ1NQ&ixlib=rb-1.2.1&q=80&w=400');
@@ -20,6 +21,7 @@
     height: 100px;
     width: 100px;
     border: 6px solid white;
+    border-radius: 5px 5px;
   }
   .card header p {
     color: #444;
